[gd_scene load_steps=3 format=3 uid="uid://v08hwgpj3sac"]

[ext_resource type="Theme" uid="uid://ccmgdq4tewmwx" path="res://Assets/Themes/Kaph.tres" id="1_150df"]
[ext_resource type="Script" uid="uid://dfobi62awb8pk" path="res://Scenes/UI/Main Menu/Leaderboard/leaderboard.gd" id="2_lhigd"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_150df")
script = ExtResource("2_lhigd")

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.866319
anchor_top = 0.936728
anchor_right = 1.01302
anchor_bottom = 0.984568
offset_right = -17.0
focus_neighbor_left = NodePath("../Leaderboard/HBoxContainer/Right")
focus_neighbor_top = NodePath("../Leaderboard/Leaderboard Container/DIFF_OPTION_1/VBoxContainer")
focus_neighbor_right = NodePath("../Leaderboard/HBoxContainer/Left")
focus_neighbor_bottom = NodePath("../Leaderboard/Leaderboard Container/DIFF_OPTION_1/VBoxContainer")
text = "BACK_BUTTON"
metadata/_edit_use_anchors_ = true

[node name="Leaderboard" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 993.0
offset_bottom = 646.0

[node name="Leaderboard Container" type="TabContainer" parent="Leaderboard"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../../Back")
focus_neighbor_right = NodePath("../../Back")
focus_neighbor_bottom = NodePath("DIFF_OPTION_1/VBoxContainer")
focus_mode = 2
tab_alignment = 1
current_tab = 0

[node name="DIFF_OPTION_1" type="ScrollContainer" parent="Leaderboard/Leaderboard Container"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard/Leaderboard Container/DIFF_OPTION_1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DIFF_OPTION_2" type="ScrollContainer" parent="Leaderboard/Leaderboard Container"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard/Leaderboard Container/DIFF_OPTION_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DIFF_OPTION_3" type="ScrollContainer" parent="Leaderboard/Leaderboard Container"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard/Leaderboard Container/DIFF_OPTION_3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DIFF_OPTION_4" type="ScrollContainer" parent="Leaderboard/Leaderboard Container"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard/Leaderboard Container/DIFF_OPTION_4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DIFF_OPTION_5" type="ScrollContainer" parent="Leaderboard/Leaderboard Container"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard/Leaderboard Container/DIFF_OPTION_5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LEADERBOARD_EXTRA_1" type="ScrollContainer" parent="Leaderboard/Leaderboard Container"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard/Leaderboard Container/LEADERBOARD_EXTRA_1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Leaderboard"]
layout_mode = 2

[node name="Left" type="Button" parent="Leaderboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../../../Back")
focus_neighbor_top = NodePath("../../Leaderboard Container/DIFF_OPTION_1/VBoxContainer")
focus_neighbor_right = NodePath("../Right")
focus_neighbor_bottom = NodePath("../../Leaderboard Container/DIFF_OPTION_1/VBoxContainer")
text = "<"

[node name="PanelContainer" type="PanelContainer" parent="Leaderboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Numbers" type="Label" parent="Leaderboard/HBoxContainer/PanelContainer"]
layout_mode = 2
text = "1/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Right" type="Button" parent="Leaderboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Left")
focus_neighbor_top = NodePath("../../Leaderboard Container/DIFF_OPTION_1/VBoxContainer")
focus_neighbor_right = NodePath("../../../Back")
focus_neighbor_bottom = NodePath("../../Leaderboard Container/DIFF_OPTION_1/VBoxContainer")
text = ">"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="tab_selected" from="Leaderboard/Leaderboard Container" to="." method="_on_leaderboard_container_tab_selected"]
[connection signal="pressed" from="Leaderboard/HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Leaderboard/HBoxContainer/Right" to="." method="_on_right_pressed"]
